# prism

./: .gitignore  README.md  TRAY_DEBUGGING.md  claude-backend.ts  diagrams.html  dump.rdb  fullscreen.html  index.html  lighthouseDiagrams.html  lighthousePitchDeck.html  modal_backend.py  overlay.html  package-lock.json  package.json  settings.html  skillgraph.html  snowkiteDiagrams.html  sync.py  tailwind.config.js  tsconfig.json  tutor.html  vite.config.ts
data/: skills.yaml
graveyard/first/: README.md  index.html  package.json  server.ts  test-tutor.ts  tsconfig.node.json  tutor.html
mockups/Learning_shad-main/: README.md  package.json  pnpm-lock.yaml
public/: app.js  index.html
sidepanel-only/: README.md  package-lock.json  package.json  server.js
src/: App.tsx  command-stream.ts  environment.ts  fullscreen-entry.tsx  index.css  main.ts  main.tsx  mock-responses.ts  overlay-entry.tsx  redis-wrapper-simple.ts  server.ts  session-state-manager.ts  settings-entry.tsx  skillgraph-entry.tsx  tutor-main.tsx  tutor.ts  types.ts  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/permissions/: default.toml
src-tauri/src/: lib.rs
src/agents/: course-context.ts  lesson-generator.ts  personalize.ts  user-context.ts
src/components/: AssistantActivity.tsx  AssistantSearchSummary.tsx  ChatInput.tsx  DraggableHeader.tsx  FullscreenViewer.tsx  HelpLayerContainer.tsx  Learning.tsx  LighthouseContainer.tsx  MessageBubble.tsx  MessageList.tsx  PrismContainer.tsx  ScreenOverlay.tsx  (+8 more)
(+122 files in other folders)
