[package]
name = "Lighthouse"
version = "0.1.0"
description = "Lighthouse"
authors = ["Max Cembalest"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.4.1", features = [] }

[dependencies]
log = "0.4"
tauri = { version = "2.8.5", features = ["tray-icon", "macos-private-api"] }
tauri-plugin-log = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-decorum = "1"
screenshots = "0.8.10"
base64 = "0.22.1"
tokio = { version = "1", features = ["time"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"

[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.25"
objc = "0.2"
core-graphics = "0.24"
core-foundation = "0.10"
